fix: overflowx experience

--- a/pages/experience/styles.module.scss
+++ b/pages/experience/styles.module.scss
@@ -41,6 +41,7 @@
   .experienceContainer {
     align-content: flex-start;
     height: auto;
+    overflow-x: hidden;
     .experiences{
       overflow: unset;
     }
